gettext-macros/tests/ui/dgettext/expected_comma.stderr
error: expected `,`
 --> tests/ui/dgettext/expected_comma.rs:4:34
  |
4 |     dgettext!("domainname", "{}" 1);
  |                                  ^
